Added means to change shot size, bottle size, # of players
Also added more controls for the YouTube player. IE enable/disable,
mute, and a way to change the playlist.

--- a/res/style.css
+++ b/res/style.css
@@ -33,7 +33,31 @@
 	right: 0;
 	cursor: pointer;
 }
+#bar{
+	position: absolute;
+	left: 10;
+	bottom: 360;
+	cursor: pointer;
+}
+#bar *{
+	display: inline-block;
+}
+#player{
+	position: absolute;
+	left: 5;
+	bottom: 5;
+}
+
 h1{
 	font-family: 'Knewave';
 	font-size: 50;
+}
+#config{
+	position: relative;
+	top: -30px;
+	font-size: 12;
+	cursor: pointer;
+}
+.button{
+	display: inline-block;
 }
